@@ -3,11 +3,12 @@ require File.dirname(__FILE__) + '/spec_helper'
 class BuildGame
   include Baler
 
-  attr_accessor :date, :home_team, :home_score, :mvp
+  attr_accessor :league, :date, :home_team, :home_score, :mvp
 
   set_remote_source File.dirname(__FILE__) + '/samples/game.html' do |source|
     source.set_context 'html > body > ol > li'
     
+    source.map :league => 'h1.global', :context => false
     source.map :date => '> span.date'
     source.map :home_team => 'html > body > ol > li > span.team.home'
     source.map :home_score => '> span.score.home'
@@ -36,6 +37,13 @@ describe 'Baler build functionality' do
       instances[0].home_score.should == "112"
       instances[1].home_team.should == "New York Knicks"
       instances[2].date.should == "Friday, February 6th"
+    end
+    
+    it 'should assign the same data to attributes that do not use context' do
+      instances = BuildGame.build
+      instances[0].league.should == 'National Basketball Association'
+      instances[1].league.should == 'National Basketball Association'
+      instances[2].league.should == 'National Basketball Association'
     end
   end
 end
