@@ -8,6 +8,8 @@
 	<meta name="author" content="Kevin Hyland">
 </head>
 <body>
+  <h1 class='global'>National Basketball Association</h1>
+  
   <ol>
     <li>
       <span class="date">Tuesday, February 3rd</span>
